# kangaroo

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  make.sh  settings.gradle
src/nativeInterop/cinterop/: interop.def
src/nativeMain/cpp/: AudioProcessor.cpp  AudioProcessor.h  AudioProcessorGlue.cpp  AudioProcessorGlue.h  CDrawContextGlue.cpp  CDrawContextGlue.h  CanvasView.cpp  CanvasView.h  CanvasViewCreator.cpp  CanvasViewCreator.h  CanvasViewGlue.cpp  CanvasViewGlue.h  IBStreamerGlue.cpp  IBStreamerGlue.h  KotlinSym.h  UIController.cpp  UIController.h  UIControllerGlue.cpp  UIControllerGlue.h  entry.cpp  utils.h  version.h
src/nativeMain/cpp-res/: kangaroo.uidesc  win32resource.rc
src/nativeMain/kotlin/ch/digorydoo/kangaroo/audio/: AudioProcessor.kt  CCNumber.kt  Envelope.kt  OutputPeakUpdater.kt  Queue.kt  Voice.kt  VoiceCollection.kt  VoiceLayer.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/audio/filter/: AbstrFilter.kt  BandPassFilter.kt  FormantFilter.kt  HighPassFilter.kt  LowPassFilter.kt  NotchFilter.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/audio/waveform/: lfoShape.kt  noise.kt  organ.kt  osc1Shape.kt  osc2Shape.kt  osc3Shape.kt  pulse.kt  saw.kt  sin.kt  triang.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/geometry/: MutablePoint2f.kt  MutablePoint2i.kt  MutableRecti.kt  Point2f.kt  Point2i.kt  Recti.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/glue/: AudioProcessorGlue.kt  CanvasViewGlue.kt  UIControllerGlue.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/math/: clamp.kt  expand.kt  lerp.kt  minMax.kt  scurve.kt  sign.kt  spow.kt  toPrecision.kt  unbalance.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/param/: AudioParams.kt  Param.kt  ParamReadStream.kt  ParamStream.kt  ParamTag.kt  ParamWriteStream.kt  ParamsList.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/ui/: CanvasView.kt  Colour.kt  DrawContext.kt  Gradient.kt  Theme.kt  UIController.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/ui/event/: KeyboardEvent.kt  MouseEvent.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/ui/gadget/: Button.kt  ConfirmableBtn.kt  DuplicateLayerBtn.kt  EnvPreview.kt  Gadget.kt  Keyboard.kt  Knob.kt  KnobAndLabel.kt  Label.kt  Logo.kt  OutputLEDs.kt  PanelFrame.kt  SurpriseMeBtn.kt  TabLabel.kt  WavePreview.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/ui/icon/: AbstrIcon.kt  IconRing.kt  SyncIcon.kt  TransformIcon.kt
src/nativeMain/kotlin/ch/digorydoo/kangaroo/ui/panel/: EQPanel.kt  EffectPanel.kt  Env1Panel.kt  Env2Panel.kt  Env3Panel.kt  FilterPanel.kt  LayerPanel.kt  Lfo1Panel.kt  Lfo2Panel.kt  Lfo3Panel.kt  MainPanel.kt  NoisePanel.kt  Osc1Panel.kt  Osc2Panel.kt  Osc3Panel.kt  PitchPanel.kt  RightPanel.kt  RootContainer.kt  StatusPanel.kt  TopPanel.kt  TransformPanel.kt
src/nativeMain/resources/: README.md
src/nativeTest/kotlin/: README.md
src/nativeTest/resources/: README.md
